deploy/production/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitopsdemo-deployment
  labels:
    app: gitopsdemo
spec:
  selector:
    matchLabels:
      app: gitopsdemo
  template:
    metadata:
      labels:
        app: gitopsdemo
    spec:
      restartPolicy: Always
      containers:
        - name: gitopsdemo
          image: ghcr.io/pmdevers/gitopsdemo:9d70bd6
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: 512Mi
              cpu: 100m
            limits:
              memory: 2Gi
              cpu: 2000m
          livenessProbe:
            httpGet:
              path: /gitopsdemo
              port: 8080
          readinessProbe:
            httpGet:
              path: /gitopsdemo
              port: 8080
