deploy/production/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitopsdemo
  labels:
    app: gitopsdemo
spec:
  rules:
    - host: www.patrick-evers.nl
      http:
        paths:
          - path: /gitopsdemo
            pathType: Prefix
            backend:
              service:
                name: gitopsdemo
                port:
                  number: 8080
